# hummus

./: .dockerignore  .gitignore  .prettierrc.json  Cargo.toml  Dockerfile  README.md  default.nix  docker-compose.yaml  flake.nix  justfile  rust-toolchain.toml
api/: Cargo.toml
api/src/: lib.rs
api_request/: Cargo.toml  api.md  test.sh
api_request/src/: communication.rs  error.rs  lib.rs  note.rs  request.rs
api_request/src/request/: native.rs  wasm.rs
app/: tauri.conf.json
hulp/: Cargo.toml  tauri.conf.json
huttp/: Cargo.toml
huttp/src/: main.rs
huui/: index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
ids/: Cargo.toml  Dockerfile
server/: Cargo.toml  Dockerfile  build.rs
server/src/: main.rs
src/: command_arguments.rs  database.rs  error.rs  log.rs  main.rs  rust_backtrace.rs  something.toml
ui/: package.json  pnpm-lock.yaml  rsbuild.config.ts
ui/src/: env.d.ts  index.html  main.ts
