[package]
name = "hummus"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.19", features = ["derive", "cargo", "env"] }
directories = "5.0.1"
libsql = "0.6.0"
serde = { version = "1.0.210", features = ["derive", "serde_derive"] }
snafu = { version = "0.8.5", features = ["backtrace", "backtraces-impl-backtrace-crate", "futures"] }
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["json", "tracing", "valuable"] }
valuable = { version = "0.1.0", features = ["derive"] }
