[package]
name = "api_request"
version = "0.1.0"
edition = "2024"
[lib]

[features]
tauri_axum = []

[dependencies]
axum = "0.8.3"
http-body = "0.4.5"
serde_json="1.0.140"
tower-service = "0.3.1"
reqwest = { version = "0.12.15", features = ["gzip", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
futures = "0.3.31"
