[package]
name = "api_request"
version = "0.1.0"
edition = "2024"
[lib]

[features]
tauri = [
    "dep:axum",
    "dep:tower-service",
    "dep:tauri-macros",
    "dep:http-body-util",
    "dep:tauri-wasm",
    "dep:serde-wasm-bindgen",
    "dep:wasm-bindgen",
]

[dependencies]
serde_json={version="1.0.140",default-features=false}
reqwest = { version = "0.12.15", features = ["gzip", "json"] ,default-features=false}
serde = { version = "1.0.219", features = ["derive"] ,default-features=false}

[target.'cfg(target_arch = "wasm32")'.dependencies]
serde-wasm-bindgen = { version = "0.6", optional = true, default-features = false }
tauri-wasm = { version = "0.1.2", features = ["serde"], optional = true, default-features = false }
wasm-bindgen = { version = "0.2.100", optional = true, default-features = false }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
axum = { version = "0.8.3", optional = true, default-features = false }
tauri-macros = { version = "2.1.1", optional = true, default-features = false }
tower-service = { version = "0.3.1", optional = true, default-features = false }
http-body-util = { version = "0.1.3", optional = true, default-features = false }
